{
  "version": 4,
  "terraform_version": "1.14.2",
  "serial": 12,
  "lineage": "fd63b8b7-2cc1-07ec-6073-ca023fc3c3f7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "hashicat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e9521a61a3339ee5",
            "domain": "vpc",
            "id": "eipalloc-07b5d60608b21da0e",
            "instance": "i-04b25b760226f4ae5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03da1347cfd158e1a",
            "private_dns": "ip-10-0-10-57.ec2.internal",
            "private_ip": "10.0.10.57",
            "public_dns": "ec2-3-209-195-34.compute-1.amazonaws.com",
            "public_ip": "3.209.195.34",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.hashicat",
            "aws_key_pair.hashicat",
            "aws_security_group.hashicat",
            "aws_subnet.hashicat",
            "aws_vpc.hashicat",
            "data.aws_ami.ubuntu",
            "tls_private_key.hashicat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hashicat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:798306367270:instance/i-04b25b760226f4ae5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04b25b760226f4ae5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "academy-ssh-key.pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03da1347cfd158e1a",
            "private_dns": "ip-10-0-10-57.ec2.internal",
            "private_ip": "10.0.10.57",
            "public_dns": "ec2-3-90-68-226.compute-1.amazonaws.com",
            "public_ip": "3.90.68.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a27dbeaccc5bf71e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0abb5e409b7434066",
            "tags": {
              "Name": "academy-hashicat-instance"
            },
            "tags_all": {
              "Name": "academy-hashicat-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07fb5c7231f06468a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.hashicat",
            "aws_security_group.hashicat",
            "aws_subnet.hashicat",
            "aws_vpc.hashicat",
            "data.aws_ami.ubuntu",
            "tls_private_key.hashicat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hashicat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798306367270:internet-gateway/igw-0ded2774a56e63365",
            "id": "igw-0ded2774a56e63365",
            "owner_id": "798306367270",
            "tags": {
              "Name": "academy-internet-gateway"
            },
            "tags_all": {
              "Name": "academy-internet-gateway"
            },
            "vpc_id": "vpc-024fc04c532a1f790"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.hashicat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hashicat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798306367270:route-table/rtb-09d34eb92a5786a92",
            "id": "rtb-09d34eb92a5786a92",
            "owner_id": "798306367270",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ded2774a56e63365",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-024fc04c532a1f790"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.hashicat",
            "aws_vpc.hashicat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hashicat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6c12952f447f114",
            "route_table_id": "rtb-09d34eb92a5786a92",
            "subnet_id": "subnet-0abb5e409b7434066"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.hashicat",
            "aws_route_table.hashicat",
            "aws_subnet.hashicat",
            "aws_vpc.hashicat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hashicat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798306367270:security-group/sg-07fb5c7231f06468a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07fb5c7231f06468a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "academy-security-group",
            "name_prefix": "",
            "owner_id": "798306367270",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "academy-security-group"
            },
            "tags_all": {
              "Name": "academy-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-024fc04c532a1f790"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.hashicat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hashicat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798306367270:subnet/subnet-0abb5e409b7434066",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0abb5e409b7434066",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "798306367270",
            "tags": {
              "name": "academy-subnet"
            },
            "tags_all": {
              "name": "academy-subnet"
            },
            "vpc_id": "vpc-024fc04c532a1f790"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.hashicat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hashicat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798306367270:vpc/vpc-024fc04c532a1f790",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-041740da3643b9e43",
            "default_route_table_id": "rtb-06a5c9774d95b65ca",
            "default_security_group_id": "sg-075de712a791aa638",
            "dhcp_options_id": "dopt-035410eca10899e10",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-024fc04c532a1f790",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06a5c9774d95b65ca",
            "owner_id": "798306367270",
            "tags": {
              "environment": "Production",
              "name": "academy-vpc-us-east-1"
            },
            "tags_all": {
              "environment": "Production",
              "name": "academy-vpc-us-east-1"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}